--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <a href="#" target="_blank" class="header__title">&lt;/HTML&gt;</a>
+      <a href="#" target="_blank" class="logo__title">&lt;/html&gt;</a>
       <h1 class="header__text"> ЗАКРЫВАЮЩИй ТЕГ </h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -304,181 +304,23 @@
       </section>
       <section class="footer">
         <button type="button" class="footer__button" onclick="window['dialog-id'].showModal();" aria-controls="dialog-id">
-          <!-- не понятно зачем убирать код, ведь так нельзя будет изменить цвет заливки -->
-          <svg class="footer__button__img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" fill="none">
-            <rect x="0.5" y="0.5" width="3" height="3"/>
-            <rect x="0.5" y="3.5" width="3" height="3"/>
-            <rect x="0.5" y="6.5" width="3" height="3"/>
-            <rect x="0.5" y="9.5" width="3" height="3"/>
-            <rect x="0.5" y="12.5" width="3" height="3"/>
-            <rect x="0.5" y="15.5" width="3" height="3"/>
-            <rect x="0.5" y="18.5" width="3" height="3"/>
-            <rect x="0.5" y="21.5" width="3" height="3"/>
-            <rect x="0.5" y="24.5" width="3" height="3"/>
-            <rect x="0.5" y="27.5" width="3" height="3"/>
-            <rect x="0.5" y="30.5" width="3" height="3"/>
-            <rect x="0.5" y="33.5" width="3" height="3"/>
-            <rect x="0.5" y="36.5" width="3" height="3"/>
-            <rect x="33.5" y="0.5" width="3" height="3" transform="rotate(90 33.5 0.5)"/>
-            <rect x="30.5" y="0.5" width="3" height="3" transform="rotate(90 30.5 0.5)"/>
-            <rect x="27.5" y="0.5" width="3" height="3" transform="rotate(90 27.5 0.5)"/>
-            <rect x="24.5" y="0.5" width="3" height="3" transform="rotate(90 24.5 0.5)"/>
-            <rect x="21.5" y="0.5" width="3" height="3" transform="rotate(90 21.5 0.5)"/>
-            <rect x="18.5" y="0.5" width="3" height="3" transform="rotate(90 18.5 0.5)"/>
-            <rect x="15.5" y="0.5" width="3" height="3" transform="rotate(90 15.5 0.5)"/>
-            <rect x="12.5" y="0.5" width="3" height="3" transform="rotate(90 12.5 0.5)"/>
-            <rect x="9.5" y="0.5" width="3" height="3" transform="rotate(90 9.5 0.5)"/>
-            <rect x="6.5" y="0.5" width="3" height="3" transform="rotate(90 6.5 0.5)"/>
-            <rect x="36.5" y="3.5" width="3" height="3" transform="rotate(90 36.5 3.5)"/>
-            <rect x="9.5" y="6.5" width="3" height="3" transform="rotate(90 9.5 6.5)"/>
-            <rect x="9.5" y="3.5" width="3" height="3" transform="rotate(90 9.5 3.5)"/>
-            <rect x="9.5" y="9.5" width="3" height="3" transform="rotate(90 9.5 9.5)"/>
-            <rect x="30.5" y="6.5" width="3" height="3" transform="rotate(90 30.5 6.5)"/>
-            <rect x="30.5" y="3.5" width="3" height="3" transform="rotate(90 30.5 3.5)"/>
-            <rect x="30.5" y="9.5" width="3" height="3" transform="rotate(90 30.5 9.5)"/>
-            <rect x="24.5" y="6.5" width="3" height="3" transform="rotate(90 24.5 6.5)"/>
-            <rect x="24.5" y="3.5" width="3" height="3" transform="rotate(90 24.5 3.5)"/>
-            <rect x="24.5" y="9.5" width="3" height="3" transform="rotate(90 24.5 9.5)"/>
-            <rect x="30.5" y="12.5" width="3" height="3" transform="rotate(90 30.5 12.5)"/>
-            <rect x="27.5" y="12.5" width="3" height="3" transform="rotate(90 27.5 12.5)"/>
-            <rect x="24.5" y="12.5" width="3" height="3" transform="rotate(90 24.5 12.5)"/>
-            <rect x="21.5" y="12.5" width="3" height="3" transform="rotate(90 21.5 12.5)"/>
-            <rect x="18.5" y="12.5" width="3" height="3" transform="rotate(90 18.5 12.5)"/>
-            <rect x="15.5" y="12.5" width="3" height="3" transform="rotate(90 15.5 12.5)"/>
-            <rect x="12.5" y="12.5" width="3" height="3" transform="rotate(90 12.5 12.5)"/>
-            <rect x="9.5" y="12.5" width="3" height="3" transform="rotate(90 9.5 12.5)"/>
-            <rect x="33.5" y="21.5" width="3" height="3" transform="rotate(90 33.5 21.5)"/>
-            <rect x="30.5" y="21.5" width="3" height="3" transform="rotate(90 30.5 21.5)"/>
-            <rect x="27.5" y="21.5" width="3" height="3" transform="rotate(90 27.5 21.5)"/>
-            <rect x="24.5" y="21.5" width="3" height="3" transform="rotate(90 24.5 21.5)"/>
-            <rect x="21.5" y="21.5" width="3" height="3" transform="rotate(90 21.5 21.5)"/>
-            <rect x="18.5" y="21.5" width="3" height="3" transform="rotate(90 18.5 21.5)"/>
-            <rect x="15.5" y="21.5" width="3" height="3" transform="rotate(90 15.5 21.5)"/>
-            <rect x="12.5" y="21.5" width="3" height="3" transform="rotate(90 12.5 21.5)"/>
-            <rect x="9.5" y="21.5" width="3" height="3" transform="rotate(90 9.5 21.5)"/>
-            <rect x="33.5" y="24.5" width="3" height="3" transform="rotate(90 33.5 24.5)"/>
-            <rect x="9.5" y="24.5" width="3" height="3" transform="rotate(90 9.5 24.5)"/>
-            <rect x="33.5" y="27.5" width="3" height="3" transform="rotate(90 33.5 27.5)"/>
-            <rect x="9.5" y="27.5" width="3" height="3" transform="rotate(90 9.5 27.5)"/>
-            <rect x="33.5" y="30.5" width="3" height="3" transform="rotate(90 33.5 30.5)"/>
-            <rect x="9.5" y="30.5" width="3" height="3" transform="rotate(90 9.5 30.5)"/>
-            <rect x="9.5" y="33.5" width="3" height="3" transform="rotate(90 9.5 33.5)"/>
-            <rect x="33.5" y="33.5" width="3" height="3" transform="rotate(90 33.5 33.5)"/>
-            <rect x="36.5" y="36.5" width="3" height="3" transform="rotate(90 36.5 36.5)"/>
-            <rect x="33.5" y="36.5" width="3" height="3" transform="rotate(90 33.5 36.5)"/>
-            <rect x="30.5" y="36.5" width="3" height="3" transform="rotate(90 30.5 36.5)"/>
-            <rect x="27.5" y="36.5" width="3" height="3" transform="rotate(90 27.5 36.5)"/>
-            <rect x="24.5" y="36.5" width="3" height="3" transform="rotate(90 24.5 36.5)"/>
-            <rect x="21.5" y="36.5" width="3" height="3" transform="rotate(90 21.5 36.5)"/>
-            <rect x="18.5" y="36.5" width="3" height="3" transform="rotate(90 18.5 36.5)"/>
-            <rect x="15.5" y="36.5" width="3" height="3" transform="rotate(90 15.5 36.5)"/>
-            <rect x="12.5" y="36.5" width="3" height="3" transform="rotate(90 12.5 36.5)"/>
-            <rect x="9.5" y="36.5" width="3" height="3" transform="rotate(90 9.5 36.5)"/>
-            <rect x="6.5" y="36.5" width="3" height="3" transform="rotate(90 6.5 36.5)"/>
-            <rect x="39.5" y="39.5" width="3" height="3" transform="rotate(-180 39.5 39.5)"/>
-            <rect x="39.5" y="36.5" width="3" height="3" transform="rotate(-180 39.5 36.5)"/>
-            <rect x="39.5" y="33.5" width="3" height="3" transform="rotate(-180 39.5 33.5)"/>
-            <rect x="39.5" y="30.5" width="3" height="3" transform="rotate(-180 39.5 30.5)"/>
-            <rect x="39.5" y="27.5" width="3" height="3" transform="rotate(-180 39.5 27.5)"/>
-            <rect x="39.5" y="24.5" width="3" height="3" transform="rotate(-180 39.5 24.5)"/>
-            <rect x="39.5" y="21.5" width="3" height="3" transform="rotate(-180 39.5 21.5)"/>
-            <rect x="39.5" y="18.5" width="3" height="3" transform="rotate(-180 39.5 18.5)"/>
-            <rect x="39.5" y="15.5" width="3" height="3" transform="rotate(-180 39.5 15.5)"/>
-            <rect x="39.5" y="12.5" width="3" height="3" transform="rotate(-180 39.5 12.5)"/>
-            <rect x="39.5" y="9.5" width="3" height="3" transform="rotate(-180 39.5 9.5)"/>
+          <svg class="footer__button__img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" fill="green">
+            <use class="floppy" href="svg/floppy.svg#disket"></use>
           </svg>
           <span class="footer__button__text">Сохранить на память</span>
         </button>
         <dialog id="dialog-id" class="popup">
           <div class="popup-wrapper">
             <div class="popup-container">
-              <!-- не понятно зачем убирать код, ведь так нельзя будет изменить цвет заливки -->
-              <svg class="popup-floppy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" fill="none">
-                <rect x="0.5" y="0.5" width="3" height="3"/>
-                <rect x="0.5" y="3.5" width="3" height="3"/>
-                <rect x="0.5" y="6.5" width="3" height="3"/>
-                <rect x="0.5" y="9.5" width="3" height="3"/>
-                <rect x="0.5" y="12.5" width="3" height="3"/>
-                <rect x="0.5" y="15.5" width="3" height="3"/>
-                <rect x="0.5" y="18.5" width="3" height="3"/>
-                <rect x="0.5" y="21.5" width="3" height="3"/>
-                <rect x="0.5" y="24.5" width="3" height="3"/>
-                <rect x="0.5" y="27.5" width="3" height="3"/>
-                <rect x="0.5" y="30.5" width="3" height="3"/>
-                <rect x="0.5" y="33.5" width="3" height="3"/>
-                <rect x="0.5" y="36.5" width="3" height="3"/>
-                <rect x="33.5" y="0.5" width="3" height="3" transform="rotate(90 33.5 0.5)"/>
-                <rect x="30.5" y="0.5" width="3" height="3" transform="rotate(90 30.5 0.5)"/>
-                <rect x="27.5" y="0.5" width="3" height="3" transform="rotate(90 27.5 0.5)"/>
-                <rect x="24.5" y="0.5" width="3" height="3" transform="rotate(90 24.5 0.5)"/>
-                <rect x="21.5" y="0.5" width="3" height="3" transform="rotate(90 21.5 0.5)"/>
-                <rect x="18.5" y="0.5" width="3" height="3" transform="rotate(90 18.5 0.5)"/>
-                <rect x="15.5" y="0.5" width="3" height="3" transform="rotate(90 15.5 0.5)"/>
-                <rect x="12.5" y="0.5" width="3" height="3" transform="rotate(90 12.5 0.5)"/>
-                <rect x="9.5" y="0.5" width="3" height="3" transform="rotate(90 9.5 0.5)"/>
-                <rect x="6.5" y="0.5" width="3" height="3" transform="rotate(90 6.5 0.5)"/>
-                <rect x="36.5" y="3.5" width="3" height="3" transform="rotate(90 36.5 3.5)"/>
-                <rect x="9.5" y="6.5" width="3" height="3" transform="rotate(90 9.5 6.5)"/>
-                <rect x="9.5" y="3.5" width="3" height="3" transform="rotate(90 9.5 3.5)"/>
-                <rect x="9.5" y="9.5" width="3" height="3" transform="rotate(90 9.5 9.5)"/>
-                <rect x="30.5" y="6.5" width="3" height="3" transform="rotate(90 30.5 6.5)"/>
-                <rect x="30.5" y="3.5" width="3" height="3" transform="rotate(90 30.5 3.5)"/>
-                <rect x="30.5" y="9.5" width="3" height="3" transform="rotate(90 30.5 9.5)"/>
-                <rect x="24.5" y="6.5" width="3" height="3" transform="rotate(90 24.5 6.5)"/>
-                <rect x="24.5" y="3.5" width="3" height="3" transform="rotate(90 24.5 3.5)"/>
-                <rect x="24.5" y="9.5" width="3" height="3" transform="rotate(90 24.5 9.5)"/>
-                <rect x="30.5" y="12.5" width="3" height="3" transform="rotate(90 30.5 12.5)"/>
-                <rect x="27.5" y="12.5" width="3" height="3" transform="rotate(90 27.5 12.5)"/>
-                <rect x="24.5" y="12.5" width="3" height="3" transform="rotate(90 24.5 12.5)"/>
-                <rect x="21.5" y="12.5" width="3" height="3" transform="rotate(90 21.5 12.5)"/>
-                <rect x="18.5" y="12.5" width="3" height="3" transform="rotate(90 18.5 12.5)"/>
-                <rect x="15.5" y="12.5" width="3" height="3" transform="rotate(90 15.5 12.5)"/>
-                <rect x="12.5" y="12.5" width="3" height="3" transform="rotate(90 12.5 12.5)"/>
-                <rect x="9.5" y="12.5" width="3" height="3" transform="rotate(90 9.5 12.5)"/>
-                <rect x="33.5" y="21.5" width="3" height="3" transform="rotate(90 33.5 21.5)"/>
-                <rect x="30.5" y="21.5" width="3" height="3" transform="rotate(90 30.5 21.5)"/>
-                <rect x="27.5" y="21.5" width="3" height="3" transform="rotate(90 27.5 21.5)"/>
-                <rect x="24.5" y="21.5" width="3" height="3" transform="rotate(90 24.5 21.5)"/>
-                <rect x="21.5" y="21.5" width="3" height="3" transform="rotate(90 21.5 21.5)"/>
-                <rect x="18.5" y="21.5" width="3" height="3" transform="rotate(90 18.5 21.5)"/>
-                <rect x="15.5" y="21.5" width="3" height="3" transform="rotate(90 15.5 21.5)"/>
-                <rect x="12.5" y="21.5" width="3" height="3" transform="rotate(90 12.5 21.5)"/>
-                <rect x="9.5" y="21.5" width="3" height="3" transform="rotate(90 9.5 21.5)"/>
-                <rect x="33.5" y="24.5" width="3" height="3" transform="rotate(90 33.5 24.5)"/>
-                <rect x="9.5" y="24.5" width="3" height="3" transform="rotate(90 9.5 24.5)"/>
-                <rect x="33.5" y="27.5" width="3" height="3" transform="rotate(90 33.5 27.5)"/>
-                <rect x="9.5" y="27.5" width="3" height="3" transform="rotate(90 9.5 27.5)"/>
-                <rect x="33.5" y="30.5" width="3" height="3" transform="rotate(90 33.5 30.5)"/>
-                <rect x="9.5" y="30.5" width="3" height="3" transform="rotate(90 9.5 30.5)"/>
-                <rect x="9.5" y="33.5" width="3" height="3" transform="rotate(90 9.5 33.5)"/>
-                <rect x="33.5" y="33.5" width="3" height="3" transform="rotate(90 33.5 33.5)"/>
-                <rect x="36.5" y="36.5" width="3" height="3" transform="rotate(90 36.5 36.5)"/>
-                <rect x="33.5" y="36.5" width="3" height="3" transform="rotate(90 33.5 36.5)"/>
-                <rect x="30.5" y="36.5" width="3" height="3" transform="rotate(90 30.5 36.5)"/>
-                <rect x="27.5" y="36.5" width="3" height="3" transform="rotate(90 27.5 36.5)"/>
-                <rect x="24.5" y="36.5" width="3" height="3" transform="rotate(90 24.5 36.5)"/>
-                <rect x="21.5" y="36.5" width="3" height="3" transform="rotate(90 21.5 36.5)"/>
-                <rect x="18.5" y="36.5" width="3" height="3" transform="rotate(90 18.5 36.5)"/>
-                <rect x="15.5" y="36.5" width="3" height="3" transform="rotate(90 15.5 36.5)"/>
-                <rect x="12.5" y="36.5" width="3" height="3" transform="rotate(90 12.5 36.5)"/>
-                <rect x="9.5" y="36.5" width="3" height="3" transform="rotate(90 9.5 36.5)"/>
-                <rect x="6.5" y="36.5" width="3" height="3" transform="rotate(90 6.5 36.5)"/>
-                <rect x="39.5" y="39.5" width="3" height="3" transform="rotate(-180 39.5 39.5)"/>
-                <rect x="39.5" y="36.5" width="3" height="3" transform="rotate(-180 39.5 36.5)"/>
-                <rect x="39.5" y="33.5" width="3" height="3" transform="rotate(-180 39.5 33.5)"/>
-                <rect x="39.5" y="30.5" width="3" height="3" transform="rotate(-180 39.5 30.5)"/>
-                <rect x="39.5" y="27.5" width="3" height="3" transform="rotate(-180 39.5 27.5)"/>
-                <rect x="39.5" y="24.5" width="3" height="3" transform="rotate(-180 39.5 24.5)"/>
-                <rect x="39.5" y="21.5" width="3" height="3" transform="rotate(-180 39.5 21.5)"/>
-                <rect x="39.5" y="18.5" width="3" height="3" transform="rotate(-180 39.5 18.5)"/>
-                <rect x="39.5" y="15.5" width="3" height="3" transform="rotate(-180 39.5 15.5)"/>
-                <rect x="39.5" y="12.5" width="3" height="3" transform="rotate(-180 39.5 12.5)"/>
-                <rect x="39.5" y="9.5" width="3" height="3" transform="rotate(-180 39.5 9.5)"/>
+              <svg class="popup-floppy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+                <use class="floppy" href="svg/floppy.svg#disket"></use>
               </svg>
               <span class="popup-text">Вставьте дискету, чтобы продолжить</span>
             </div>
             <form method="dialog">
-              <button class="popup-button" type="submit">OK</button>
+              <button class="popup-button" type="submit">
+                <span class="popup-button-text">ок</span>
+              </button>
             </form>
           </div>
         </dialog>
