--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
   <body class="page">
     <header class="header">
       <a href="#" target="_blank" class="logo__title">&lt;/html&gt;</a>
-      <!-- мне в прошлое замечание сказали убрать span, эту трансформацию никак без этого не реализовать -->
-      <h1 class="header__text"> <span class="letter-uppercase">закрывающи</span>й <span class="letter-uppercase">тег</span> </h1>
+      <h1 class="header__text"> закрывающий тег </h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
         <ul class="theme-menu__list">
@@ -305,29 +304,34 @@
       </section>
       <section class="footer">
         <button type="button" class="footer__button" onclick="window['dialog-id'].showModal();" aria-controls="dialog-id">
-          <svg class="footer__button__img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
-            <!-- не могу заставить отобразится svg, до этого код вставлял явным образом и все работало, через use никак -->
-            <use href="svg/floppy.svg#disket"></use>
+          <!-- несколько картинок которые ниже закомментировал отображаются кроме disketa_2, 
+            с наставников не смог разобрать, что не так, советы не помогли --->
+          <!-- <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="none" viewBox="0 0 40 40">
+            <path fill="#000" d="M.5.5h3v3h-3zM.5 3.5h3v3h-3zM.5 6.5h3v3h-3zM.5 9.5h3v3h-3zM.5 12.5h3v3h-3zM.5 15.5h3v3h-3zM.5 18.5h3v3h-3zM.5 21.5h3v3h-3zM.5 24.5h3v3h-3zM.5 27.5h3v3h-3zM.5 30.5h3v3h-3zM.5 33.5h3v3h-3zM.5 36.5h3v3h-3zM33.5.5v3h-3v-3zM30.5.5v3h-3v-3zM27.5.5v3h-3v-3zM24.5.5v3h-3v-3zM21.5.5v3h-3v-3zM18.5.5v3h-3v-3zM15.5.5v3h-3v-3zM12.5.5v3h-3v-3zM9.5.5v3h-3v-3zM6.5.5v3h-3v-3zM36.5 3.5v3h-3v-3zM9.5 6.5v3h-3v-3zM9.5 3.5v3h-3v-3zM9.5 9.5v3h-3v-3zM30.5 6.5v3h-3v-3zM30.5 3.5v3h-3v-3zM30.5 9.5v3h-3v-3zM24.5 6.5v3h-3v-3zM24.5 3.5v3h-3v-3zM24.5 9.5v3h-3v-3zM30.5 12.5v3h-3v-3zM27.5 12.5v3h-3v-3zM24.5 12.5v3h-3v-3zM21.5 12.5v3h-3v-3zM18.5 12.5v3h-3v-3zM15.5 12.5v3h-3v-3zM12.5 12.5v3h-3v-3zM9.5 12.5v3h-3v-3zM33.5 21.5v3h-3v-3zM30.5 21.5v3h-3v-3zM27.5 21.5v3h-3v-3zM24.5 21.5v3h-3v-3zM21.5 21.5v3h-3v-3zM18.5 21.5v3h-3v-3zM15.5 21.5v3h-3v-3zM12.5 21.5v3h-3v-3zM9.5 21.5v3h-3v-3zM33.5 24.5v3h-3v-3zM9.5 24.5v3h-3v-3zM33.5 27.5v3h-3v-3zM9.5 27.5v3h-3v-3zM33.5 30.5v3h-3v-3zM9.5 30.5v3h-3v-3zM9.5 33.5v3h-3v-3zM33.5 33.5v3h-3v-3zM36.5 36.5v3h-3v-3zM33.5 36.5v3h-3v-3zM30.5 36.5v3h-3v-3zM27.5 36.5v3h-3v-3zM24.5 36.5v3h-3v-3zM21.5 36.5v3h-3v-3zM18.5 36.5v3h-3v-3zM15.5 36.5v3h-3v-3zM12.5 36.5v3h-3v-3zM9.5 36.5v3h-3v-3zM6.5 36.5v3h-3v-3zM39.5 39.5h-3v-3h3zM39.5 36.5h-3v-3h3zM39.5 33.5h-3v-3h3zM39.5 30.5h-3v-3h3zM39.5 27.5h-3v-3h3zM39.5 24.5h-3v-3h3zM39.5 21.5h-3v-3h3zM39.5 18.5h-3v-3h3zM39.5 15.5h-3v-3h3zM39.5 12.5h-3v-3h3zM39.5 9.5h-3v-3h3z"/>
+          </svg> -->
+          <svg class="footer__disk" viewBox="0 0 40 40">
+            <use href="./svg/disketa_2#disk.svg"></use>
           </svg>
+          <!-- <img class="footer__disk" src="./svg/disketa.svg">
+          <img class="footer__disk" src="./svg/disketa_2.svg"> -->
           <span class="footer__button__text">Сохранить на память</span>
         </button>
-        <dialog id="dialog-id" class="popup">
-          <div class="popup-wrapper">
-            <div class="popup-container">
-              <svg class="popup-floppy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
-                <!-- не могу заставить отобразится svg, до этого код вставлял явным образом и все работало, через use никак -->
-                <use href="svg/floppy.svg#disket"></use>
-              </svg>
-              <span class="popup-text">Вставьте дискету, чтобы продолжить</span>
-            </div>
-            <form method="dialog">
-              <button class="popup-button" type="submit">
-                <span class="popup-button-text">ок</span>
-              </button>
-            </form>
-          </div>
-        </dialog>
       </section>
+      <dialog id="dialog-id" class="popup">
+        <div class="popup-wrapper">
+          <div class="popup-container">
+            <!-- <svg class="popup-floppy" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40">
+              <use href="svg/floppy.svg#disket"></use>
+            </svg> -->
+            <span class="popup-text">Вставьте дискету, чтобы продолжить</span>
+          </div>
+          <form method="dialog">
+            <button class="popup-button" type="submit">
+              <span class="popup-button-text">ок</span>
+            </button>
+          </form>
+        </div>
+      </dialog>
     </main>
     <script src="./scripts/like.js"></script>
   </body>
